@@ -20,9 +20,9 @@
 			<td><input type="checkbox" id="OregonScientific" name="OregonScientific">&nbsp;<label for="OregonScientific">Oregon Scientific</label></td>
 		</tr>
 		<tr>
-			<td><input type="checkbox" id="rfu4">&nbsp;<label for="rfu4">RFU 4</label></td>
-			<td><input type="checkbox" id="FS20">&nbsp;<label for="FS20">FS20</label></td>
-			<td><input type="checkbox" id="Meiantech">&nbsp;<label for="Meiantech">Meiantech</label></td>
+			<td><input type="checkbox" id="rfu4" name="rfu4">&nbsp;<label for="rfu4">RFU 4</label></td>
+			<td><input type="checkbox" id="FS20" name="FS20">&nbsp;<label for="FS20">FS20</label></td>
+			<td><input type="checkbox" id="Meiantech" name="Meiantech">&nbsp;<label for="Meiantech">Meiantech</label></td>
 		</tr>
 		<tr>
 			<td><input type="checkbox" id="Lighting4" name="Lighting4">&nbsp;<label for="Lighting4">Lighting4</label></td>
